plang/testing/logs/false-incorrect/173/program173.p.p
pmFGW z5 (Tp) :- lqM TXi.


kEG (efs (nqF Futt0 (ZY9) (Y) M)) v5E pRV (y2Q (g (kz (oQFX (STuta) Yut4 rr (vV (yy (xXJE) (m4QNA UP (qSEC (qQ9o (MqMdR) (CUN) (pTT) tnlQk))) (z6Tb (Uo)) (Af)))))) (drZgE SH v6C)).
eeus bRc ZaSHZ qKTp (cp) :- xZNMH ZQ (Fd) ij (zbBZ), (old8 (UoJ) (G8K) s6N (xi (d (d (N9)) fmBx (g2fGQ QF6C a (Tz) (ZD)) Lf7QY) (H0h5))); ks (wwL (I9) (TV) gRuK); sXaP (kD yBYm) (LcDg), i78i3 psHA (R) (q Wt (l5Af8 (deDBf (qnE grpd z eKs (DnDH)) (N) k8)) D1 L81A) Wy; (nj J y6Yu Ue6), aZf (S) (kbsp doX3L (w (SsX)) w).

vN7 (JL) JR :- xQUe.
m1b35 (pW DXO U) :- (t), e04a o, boO9 (kKc); (m5 rFct), r M (eEgcy (dnEBG (V2gw) (X) (o (h6arL) (p))) (HUl) (ojGR)) (mFp ewZOL (S) J8) DB4hy; b f Rvo (YR) (D1K), (k8PG (Q) UfUtJ (FLoEh)).


olyt :- uZo2 (EBs2x), ygrZl u0Ds BQmH, pRnw4 k (xg (e8Lj) (llarh) ndC (a1)) sAN6l (RkMbh), pQL4B (S) (eE (Q4)) (MCTX) GAz, j0 (CjHVo) Ulkj (sig1o (Ird)), de8 (Vzt) GnE3k; (nQBqN h i7d TWnam, r0hH (d) (RhJL) (QHWvx) (vR4K T); qzd0 BR6 LBOp, l0), t SDw (yIve u9Trb) ClI (l (vE (tbeZ O7F) (a) E (z5xg9 (Km5s9) myn w5p Ali)) jCT x (mE (S) (aLC (oKr) p1nq (Tv) (N)) rZEt)).
hX7 FR EYW5w (w M (c7) wyx9n (cjxG)) (ikwF).


j (I) iwSC D :- cjZ7 (p (WPc) (Lyn) (KN5Z)) mnJu W, hnD wnr XBt nYX8D sdT, (z5MRZ (CwOZG) i7 My (opQx (E))); xlC (kyWo EXEY AD (c8 Vx1L (Doa5) (or (nB7 mGY (bu j) Bqmx4 DSkE3) xMc (PBQ) (Y)) Bpo)) (tA RppNg (mZ uKzf ni)) UzYZZ, j, bsF8 q, tsVnG YdEY (FT); (yjYlE (fr4 pK8w (Nbw94))).


wqRBQ TV l1yb (Q).


ep a4 :- oCOe (TTUj) Taf.
fvHV (h0wAg Mz (uEE (Mxog) (jJ3Sc FuBJ)) H (eY (pZBh) (j ikrII (r1f (WG) (p (gaY New Y (lm))) Qb J) (Q8oqJ) Bl4))) (FDQ).
cZse (Xgmq3) (x (C)) (hUtnF (u2O (JCbj)) KYmXa g) :- viU HMB; (bb8 xmkvc (qwj U (I3) pxvZ (TNX)), ie (UQxG) (fEl FHXP0)); (nmRiC Yoa (vj (wjpg QWq5) (EaoxD) K8) Jbjs (x)); ttfNe (wd1 QYAj P (gCS (AJ) q7n (JdVSf)) jRuVW) (B) zS (FNsP), m (L), ((j6 (VLR) rF7g6)); j VAPJb; j (KC); uJ m (Oqg); muy gmA (T), wd X1P5s (a Fka IwL (K7DB) Y5) (oSWX); (vDNLp); (en8nw (K8Q6e) (cBb7e VM2VU W hnIJd) Pj), odG0; cSf (q) (L0) NqePf.
gJ8l4 (ZFSb) fLu E L :- dH18 EU kV5 (HKs) t.


h8Y.
? ejC (jL1 noKdY (xN) (A) b8) wE HAb.


